Hopefully fixed buttons on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -14,45 +14,40 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
-
 
 #controls {
     position: absolute;
-    top: 20px;
+    top: 10px;
     left: 50%;
     transform: translateX(-50%);
-    display: none;
     z-index: 10;
     background-color: rgba(0, 0, 0, 0.7); /* semi-transparent background */
-    padding: 15px 20px;
-    border-radius: 10px;
+    padding: 10px 10px;
+    border-radius: 5px;
     color: white;
     font-family: Arial, sans-serif;
     max-width: 90%;
 }
 .button-text{
-    position:absolute;
-    font-size: 14px;
+    position: absolute;
+    font-size: 10px;
     text-align: center;
 }
 .button-group {
-    margin-top: 30px;
-    display: flex;
+    margin-top: 20px;
     justify-content: center;
     position: relative;
-    gap: 10px;
+    gap: 5px;
 }
 #controls button {
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 12px;
     border: none;
     border-radius: 5px;
     background-color: #1e90ff;
     color: white;
     cursor: pointer;
-    transition: background-color 0.3s;
 }
 #controls button:hover {
     background-color: #0f78d1;
